Thu Aug 28 10:46:35 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htlib/malloc.c: modified according to autoconf specifications as far
    as replacement functions are regarded
    * htlib/[lstat, stat].c: removed for now

Thu Aug 28 10:40:58 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdoc/cf_generate.pl: accept an optional parameter (top source directory)
    * htcommon/defaults.cc: fixed some broken lines which prevented
     cf_generate.pl from correctly working
    * htdoc/Makefile.am: modified the automake file for passing the top
     source directory to cf_generate.pl
    * htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
     Regenerated using cf_generate.pl.

Tue Aug 26 12:25:40 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * configure.in: removed AC_FUNC_MKTIME because it may not work properly
     and added default replacement directory (htlib) for future uses
   * htlib/Makefile.am: back-step with re-inclusion of mktime.c in the
     list of files to be always compiled (caused linking errors 
     for the __mktime_internal function)
   * global: updated with 'autoreconf -if'

Sun Aug 24 12:44:29 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * updated with 'autoreconf -if': autoconf 2.57, automake 1.7.6 and
     libtool 1.5.0a (autotools that come with Debian SID)

Sun Aug 24 12:39:34 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * configure.in: moved AC_PROG_LEX to AM_PROG_LEX
   * db/configure.in: enabled AM_MAINTAINER_MODE which prevented users without
     autotools to configure and compile the program (relatively to the db
     directory)
   * include/htconfig.h: previously excluded from the branch (severe error!)

Mon Jul 21 20:54:47 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * htlib/(malloc|error|lstat|stat|realloc).c: added for cross-compiling
   reasons (as suggested by automake)
   * htlib/error.h: ditto